--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,17 @@
 asgiref==3.8.1
+contourpy==1.3.1
+cycler==0.12.1
+distlib==0.3.9
 Django==5.1.2
+filelock==3.16.1
+fonttools==4.55.3
+kiwisolver==1.4.7
+packaging==24.2
+pillow==11.0.0
+platformdirs==4.3.6
 PyMySQL==1.1.1
+pyparsing==3.2.0
+python-dateutil==2.9.0.post0
+six==1.17.0
 sqlparse==0.5.1
+virtualenv==20.26.6
